try fixing searchbar bottom on iphone

--- a/source/widgets/searchbar/searchbar.scss
+++ b/source/widgets/searchbar/searchbar.scss
@@ -91,6 +91,9 @@
 .widg_searchbar-bar {
 	position: fixed;
 	height: 100vh;
+  height: -moz-available;          /* WebKit-based browsers will ignore this. */
+  height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+  height: fill-available;
 	top: 0;
 	right: -0.5 * $sizeSearchBar;
 	bottom: 0;
@@ -133,7 +136,6 @@
 		width: 100vw;
 
 		top: $headerHeightTop;
-		height: calc(100vh - 70px);
 
 		right: 0;
 		transform: translateY(-20px);
